--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,7 +1,12 @@
-<%= simple_form_for(@restaurant) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :category, :collection => ['chinese', 'italian', 'japanese', 'french', 'belgian'] %>
-  <%= f.input :address %>
-  <%= f.input :phone_number %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <h1>Create a new restaurant 🍽</h1>
+  <%= simple_form_for(@restaurant) do |f| %>
+    <%= f.input :name, hint: 'Minimum 5 letters' %>
+    <%= f.input :category, :collection => ['chinese', 'italian', 'japanese', 'french', 'belgian'] %>
+    <%= f.input :address %>
+    <%= f.input :phone_number %>
+    <%= f.submit %>
+  <% end %>
+</div>
+
+<%# label_html: { class: "btn btn-primary"} %>
