--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for([@restaurant, @review]) do |f| %>
-  <%= f.input :rating, :collection => (0..5) %>
-  <%= f.input :content %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <%= simple_form_for([@restaurant, @review]) do |f| %>
+    <%= f.input :rating, as: :radio_buttons, :collection => (0..5) %>
+    <%= f.input :content %>
+    <%= f.submit %>
+  <% end %>
+</div>
